# word-nerd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  manimatter.txt
.cargo/: config.toml
.github/workflows/: deployment.yml  rust.yml
icons/: icon.ai  icon.xd
src/: gui.rs  io.rs  main.rs
wix/: main.wxs
