[package]
name = "word-nerd"
version = "0.1.4"
edition = "2021"
authors = ["Linus Leo Stöckli", "Lea Höfliger"]
description = "A speed reader written in rust."
license = "GPL-3.0"
homepage = "https://github.com/hacknus/word-nerd"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.33", features = ["persistence"]}
egui_extras = { version = "0.33", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.9"
rfd = "0.15"
preferences = { git = "https://github.com/andybarron/preferences-rs" }
egui-theme-switch = "0.5.0"
serde = { version = "1.0", features = ["derive"] }

[package.metadata.bundle]
name = "Word Nerd"
identifier = "com.hacknus.word_nerd"
icon = ["./icons/icon-128.png", "./icons/icon-128x2.png"]
copyright = "Copyright (c) Linus Leo Stöckli, Lea Höfliger 2023. All rights reserved."
category = "Developer Tool"
short_description = "A speed reader written in rust."
license = "GPL-3.0"
osx_minimum_system_version = "10.12"
osx_url_schemes = ["com.hacknus.word_nerd"]

[package.metadata.wix]
dbg-build = false
dbg-name = false
name = "Word Nerd"
no-build = false
output = "target/wix/WordNerdInstaller.msi"
license = "GPL-3.0"